Split the aliased skill budget into named unit-bearing fields
`AgentConfigLoader` assigned `skillConfig.maxParameterValueLength()` to a
single field named `maxSkillPromptLength`, which was then compared against
at three call sites measuring three different quantities. The alias erased
the value's provenance: each call site read as though a dedicated
skill-prompt budget existed, when in fact one knob governed all of them.

Splits the alias into three fields that each name the quantity and unit they
bound: `maxSkillFileBytes`, `maxSkillContentChars`, and
`maxAssignedSkillTotalChars`. All three are still derived from the same
`sharedSkillBudget` local, so behaviour is bit-identical - this is a rename
plus documentation, not a functional change. The bytes-vs-chars split is now
visible in the field names rather than hidden behind one integer.

Adds the ADR-0007 D7 negative control that the cumulative assigned-skill
budget was missing. The pre-existing `rejectsOversizedSkillFile` test could
not reach that branch: the per-file gate and the cumulative gate shared the
same ceiling, so any single file large enough to trip the cumulative check
was already rejected per-file. The branch is only reachable when several
skills assigned to one agent sum past the cap, so the new tests drive it
that way and assert the failure arrives from the cumulative gate rather than
from either sibling gate. A two-mutant kill matrix with disjoint kills
confirms neither test is vacuous.

This gap is inherited from origin/main - `enforceAssignedSkillBudget` is
absent at merge-base fb2e795c - and was ported faithfully by the merge
rather than introduced by it.

Tests: 939 -> 942, matching the three added test methods exactly.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079